# comply

./: .clippy.toml  .gitignore  CLAUDE.md  CONTRADICTING_RULES.md  Cargo.toml  DIFF_REVIEW_FULL.md  DIFF_REVIEW_POC.md  FP_HUNTING_LOG.md  PERF.md  README.md  RULES_REVIEW_PROGRESS_2026-04-25.md  RULES_TODO.md  RULES_TO_ADD.md  RULES_TO_FIX.md  TEXTCHECK_TO_ASTCHECK.md  TODO.md  TODO_AFTER_REVIEWS.md  TODO_RULES_BACKLOG.md  TUI_SPEC.md  audit-rules.md  build.rs  clippy.toml  comply.toml  playground.rs  review-rules.rs  rules-analysis.md  rules-backlog-explore.md  rules-candidates.md  rules-master-backlog.md  rules-to-implement-now.md  rules-to-implement-tsgolint.md  rules-to-implement.md
docs/: audit-2026-05-02.md  external-linters-candidates.md  hickey-rules-todo.md  new-rules-batch-2025-04-27.md  plugin-rules-todo.md  project-scope-multi-lang.md  roadmap.md  rule-scope-expansion.md  rules-backlog.md  rules-roadmap.md  rules.md  skills-rules-candidates.md  sonar-candidates.md  sonar-remaining.md  typescript-eslint-rules-todo.md  unicorn-rules-catalog.md
docs/implementations/: 2026-04-21-skill-driven-rules.md
docs/issues/: ISS-001.md  ISS-002.md  ISS-003.md  ISS-004.md  ISS-005.md  ISS-006.md  ISS-007.md  ISS-008.md  ISS-009.md  ISS-010.md  ISS-058.md  ISS-059.md  ISS-060.md  ISS-061.md  ISS-062.md  ISS-063.md  ISS-064.md  ISS-065.md  ISS-066.md  ISS-067.md  ISS-068.md  ISS-069.md  ISS-070.md  ISS-071.md  ISS-072.md  ISS-073.md  ISS-074.md  ISS-075.md  ISS-076.md  ISS-077.md  ISS-078.md  ISS-079.md  ISS-080.md  ISS-081.md  ISS-082.md  ISS-083.md  ISS-084.md  ISS-085.md  ISS-086.md  ISS-087.md  (+41 more)
docs/plans/: 2026-04-09-comply-v1.md  2026-04-09-comply-v2.7-v2.11.md  2026-04-10-comply-v2.11-llm-backend.md  2026-04-13-miette-pretty-diagnostics.md  2026-04-21-comply-review-llm-decision-log.md  2026-04-21-comply-review-llm-implementation.md  2026-04-21-skill-driven-rules.md  2026-04-27-ISS-001.md
reviews/: 2026-04-09-08h14-commits-98924fd-vs-f0feaac.md
scripts/: codemod-add-diag-span.ts  install.sh  regen-clippy-lints.py
src/: cache.rs  cargo_modules.rs  cargo_shear.rs  catalog.rs  changed_lines.rs  cli.rs  clone_detection.rs  comment_dup_detection.rs  comment_duplicate_detection.rs  diagnostic.rs  engine.rs  explain.rs  files.rs  fix.rs  function_duplicate_detection.rs  id_length_i18n.rs  ignore_comments.rs  jscpd.rs  knip.rs  list.rs  lsp.rs  madge.rs  main.rs  output.rs  oxc_helpers.rs  oxlint.rs  oxlint_config.rs  oxlintrc.json  parsing.rs  runner_helpers.rs
tests/: e2e.rs  e2e_cli.rs  e2e_regressions.rs  e2e_rules.rs
tools/: bench-baseline.json  bench.ts  llm-worker.ts  package.json  tsconfig.json
(+6663 files in other folders)
