[package]
name = "comply"
version = "0.1.0"
edition = "2024"
# `cargo run` defaults to the production binary; `regen-clippy-lints` is
# dev-only tooling and only runs when explicitly requested via `--bin`.
default-run = "comply"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
globset = "0.4"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
ignore = "0.4"
anyhow = "1"
tempfile = "3"
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros", "sync"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
sha2 = "0.11.0"
hex = "0.4.3"
regex = "1.12.3"
rayon = "1"
tree-sitter-vue-updated = "0.1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
