[package]
name = "comply"
version = "0.1.0"
edition = "2024"
# `cargo run` defaults to the production binary; `regen-clippy-lints` is
# dev-only tooling and only runs when explicitly requested via `--bin`.
default-run = "comply"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_comments = "0.2"
toml = "0.8"
globset = "0.4"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
ignore = "0.4"
anyhow = "1"
tempfile = "3"
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros", "sync"] }
regex = "1.12.3"
rayon = "1"
tree-sitter-vue-updated = "0.1.0"
tree-sitter-yaml = "0.7"
tree-sitter-css = "0.23"
tree-sitter-dockerfile-updated = "0.2"
miette = { version = "7", features = ["fancy"] }
oxc_resolver = "11"
oxc_allocator = "0.127"
oxc_parser = "0.127"
oxc_ast = "0.127"
oxc_semantic = "0.127"
oxc_span = "0.127"
oxc_str = "0.127"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
rustc-hash = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
